--- a/vegas/public/css/style.css
+++ b/vegas/public/css/style.css
@@ -181,30 +181,37 @@ table[id="countdown"]{
 }
 
 form {
-	margin: .5em 41% .5em 41%;	
+	margin: .5em 35%;	
 }
 
 input {
-	width: 20em;
-	height: 3em;
+	font-size: 1.25em;
+	text-align: center;
+  	color: #bbb;
+  	font-family: 'Roboto', sans-serif; 
+  	margin: 0 auto;
+	width: 90%;
+	height: 2em;
 	padding: .5em;
 	box-shadow: 10px 10px 5px #888888;
 	border-radius: 4px;
 }
 
 button {
+	width: 35%;
+	font-size: 1em; 
 	background-color: #bbb;
 	color: #fff;
-	margin: 1em 30%;
+	margin: 1em 32%;
 	padding: .5em;
 	border-radius: 4px;
 	box-shadow: 10px 10px 5px #888888;
 }
 
 .attendees {   
-   	font-size: 2em;
-  	text-align: left;
-  	margin: 1em auto;
+   	font-size: 1.5em;
+  	text-align: center;
+  	margin: .5em auto;
   	list-style: none;
 }
 
