--- a/vegas/public/css/style.css
+++ b/vegas/public/css/style.css
@@ -9,23 +9,32 @@ body {
 }
 
 h1 {
-	font-family: 'Grand Hotel', cursive;
-	font-size: 2em;
-	color: #5a5a5a;
-	font-weight: bolder;
-	text-align: center;
-	margin: .5em;
+	margin: 0;
+	padding: 0;
+	font-weight: lighter;
+   	font-family:'Roboto', sans-serif ;
+   	font-size: 3em;
+  	text-align: center;
+  	margin: 1em auto;
 }
 
-.yellow_h1 {
+h2 {
+	margin: 0;
+	padding: 0;
 	font-family: 'Grand Hotel', cursive;
 	font-size: 2em;
-	color: #fff200;
 	font-weight: bolder;
 	text-align: center;
 	margin: .5em;
 }
-h2 {
+.yellow {
+	color: #fff200;
+}
+.grey {
+	color: #5a5a5a;
+}
+
+h3 {
 	font-size: 1.5em;
 	font-weight:lighter;
 	text-align: center;
@@ -33,18 +42,12 @@ h2 {
 	padding: 0;
 }
 
-h3 {
-   	font-size: 1.25em;
-   	font-weight: lighter;
-   	text-align: center;
-   	margin: .5em 0;
+h4 {
+	font-size: 1.25em;
+	font-weight:lighter;
+	text-align: center;
+	margin: 0;
 	padding: 0;
-	position: relative;
-}
-
-.content{ 
-	margin: 0 auto; 
-	width: 90%; 
 }
 
 /*Header and Navigation*/
@@ -80,9 +83,11 @@ h3 {
 
 /* General Slider Styling*/
 
-#slide1, #slide2{ 
+#slide1, #slide2, #slide3, #slide4{ 
 	width: 100%; 
 }
+
+/*Slide1*/
 
 #slide1{
 	background:url('../img/vegas.jpg') 100% 0 no-repeat fixed;
@@ -92,7 +97,10 @@ h3 {
 	background-size: cover;
 }
 
-/*Slide1*/
+.landing_container {
+	margin: 0 auto; 
+	width: 90%; 
+}
 
 #sign {
 	width: 40%;
@@ -153,7 +161,6 @@ table[id="countdown"]{
 
 #slide2 {
 	background-color: #000;
-	color: #fff;
 	height: 100vh;
 	margin: 0 auto;
 	overflow: hidden;
@@ -162,6 +169,10 @@ table[id="countdown"]{
 
 .link_white {
 	color: #fff;
+}
+
+.event_container { 
+	width: 70%; margin: 0 auto; 
 }
 
 table[id="eventTable"]{
@@ -183,17 +194,17 @@ tbody[id="events"] {
 
 #dateCol {
 	width: 20%;
-	font-size: 1.5em;
+	font-size: 1.25em;
 }
 
 #eventCol {
-	width: 45%;
-	font-size: 1.5em;
+	width: 40%;
+	font-size: 1.25em;
 }
 
 #locationCol {
-	width: 35%;
-	font-size: 1.5em;
+	width: 40%;
+	font-size: 1.25em;
 }
 
 
@@ -207,16 +218,67 @@ tbody[id="events"] {
 	background-size: cover;
 }
 
-.quotes {   
-   	font-weight: lighter;
-   	font-family:'Roboto', sans-serif ;
-   	font-size: 3em;
-  	text-align: left;
-  	margin: 1em auto;
+.hop_container {
+	margin: 0 auto; 
+	width: 90%; 
 }
-   
- .author_name { margin: 2em 0 0 2em; color: #fff200; font-size: 3em; }  
- .quotes_container, .details_container { width: 90vh; margin: 0 auto; }
+
+ .quiz_container { 
+	width:50%;
+    margin:auto;
+    padding: 1em 3em 3em 5em;
+    background-color: #fff;
+    color: #000000;
+    opacity: 0.8;
+    border-radius:5px;
+}
+
+#quiz {
+/*    display:none;*/
+}
+
+p, .answers {
+   	font-size: 1.5em;
+}
+
+.button {
+    border:2px solid;
+    border-radius:5px;
+    width: 50px;
+    text-align: center;
+    padding-left:5px;
+    padding-right: 5px;
+    position: relative;
+    float:right;
+    background-color: #fff200;
+    color: black;
+    margin: 0 2px 0 2px;
+}
+
+.button.active {
+    background-color: #5a5a5a;
+    color: #525252;
+}
+
+/*.button a {
+    text-decoration: none;
+    color: black;
+}*/
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+#prev {
+    display:none;
+}
+
+#start {
+    display:none;
+    width: 90px;
+}
 
 /*Slide 4*/
 
@@ -231,7 +293,7 @@ form {
 	margin: .5em 35%;	
 }
 
-input {
+.signupInput {
 	font-size: 1.25em;
 	text-align: center;
   	color: #bbb;
@@ -240,8 +302,8 @@ input {
 	width: 90%;
 	height: 2em;
 	padding: .5em;
-	box-shadow: 10px 10px 5px #888888;
 	border-radius: 4px;
+	box-shadow: 10px 10px 5px #888888;
 }
 
 #signUp {
@@ -264,8 +326,8 @@ input {
 
 .attendees_container { 
 	height: 40vh;
-	width: 80%;
-	margin: .5em 10%; 
+	width: 60%;
+	margin: .5em auto; 
 	color: #bbb;
 	background-color:#FFFFFF; 
 	border-radius:8px; 
@@ -273,6 +335,7 @@ input {
 	overflow: auto;
 }
 
+/*Footer*/
 #copyright {
 	margin: 2em 30%;
 	color: #bbb;
